# predictsol

./: Anchor.toml  README.md  package-lock.json
frontend/: .env.devnet  .env.mainnet  index.html  package-lock.json  package.json
frontend/public/tokens/: TEST_TRUE_MINT.json
frontend/src/: App.jsx  config.js  main.jsx
frontend/src/components/: DexChart.jsx  DisclaimerModa.jsx  Footer.jsx  OHLCVchart.jsx  RpcSettingsModal.jsx  TokenChart.jsx  TradeButton.jsx  TxHints.jsx
frontend/src/constants/: constant-devnet.js  constant-mainnet.js  index.js
frontend/src/hooks/: dexFetcher.js
frontend/src/idl/: predictol_sc.json
frontend/src/idls/: index.js
frontend/src/idls/devnet/: predictsol_sc.json
frontend/src/idls/mainnet/: predictsol_sc.json
frontend/src/lib/: anchorClient.js  anchorReadOnly.js  pdas.js  tokenMetadata.js  truthPdas.js
frontend/src/pages/: CreateEvent.jsx  Documents.jsx  EventDetail.jsx  EventsList.jsx  FAQ.jsx  SecurityPolicy.jsx
frontend/src/utils/: compactNumber.js  dateHelpers.js  dexscreener.js  fetchOhlcv.js  getPools.js  sendTx.js
predictsol_sc/: Anchor.toml  package-lock.json  package.json
predictsol_sc/programs/predictsol_sc/: Cargo.toml
predictsol_sc/programs/predictsol_sc/src/: lib.rs
predictsol_sc/tests/: predictsol_sc.ts
