[package]
name = "predictsol_sc"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", default-features = false, features = ["token", "token_2022"] }

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
cpi = []
custom-heap = []
custom-panic = []
no-log-ix-name = []
anchor-debug = []
